[gd_scene load_steps=6 format=3 uid="uid://dis1p5au5t2ur"]

[ext_resource type="Script" path="res://Pokemon.gd" id="1_ils8o"]
[ext_resource type="Texture2D" uid="uid://c5wjbmb2j136c" path="res://assets/battle_menu.png" id="2_ulvtr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_og76s"]
bg_color = Color(0.313726, 0.313726, 0.313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y7brk"]
bg_color = Color(0, 0.972549, 0.647059, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyegx"]
atlas = ExtResource("2_ulvtr")
region = Rect2(3, 3, 100, 29)

[node name="EnemyPokemon" type="Node2D"]
texture_filter = 1
script = ExtResource("1_ils8o")
team = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)

[node name="FetchPokemonDataHTTP" type="HTTPRequest" parent="."]

[node name="HPBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -539.0
offset_top = -105.5
offset_right = -395.0
offset_bottom = -93.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_og76s")
theme_override_styles/fill = SubResource("StyleBoxFlat_y7brk")
max_value = 50.0
value = 25.0
show_percentage = false

[node name="Info" type="Sprite2D" parent="."]
position = Vector2(-506, -111.5)
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_iyegx")

[node name="Level" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -508.0
offset_top = -143.0
offset_right = -397.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "Lv 1"
horizontal_alignment = 2

[node name="Name" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -638.0
offset_top = -144.0
offset_right = -465.0
offset_bottom = -102.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 36
text = "Name"

[connection signal="request_completed" from="FetchPokemonDataHTTP" to="." method="_on_fetch_pokemon_data_http_request_completed"]
